--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/FreebieList.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/FreebieList.razor
@@ -36,7 +36,8 @@
               Data="FreebieListItems"
               ReadData="UpdateFreebieList"
               TotalItems="Total"
-              ShowPager="true">
+              ShowPager="true"
+              RowDoubleClicked="OnEditItem">
         <DataGridColumns>
             <DataGridColumn TItem="FreebieDto"
                             Field="@nameof(FreebieDto.ItemName)"
@@ -73,11 +74,6 @@
 
 
 
-    public void OnEditItem(DataGridRowMouseEventArgs<FreebieDto> e)
-    {
-        var id = e.Item.Id;
-        // NavigationManager.NavigateTo("/Freebie/New" + id);
-
-    }
+    
 
 }
