delete freebie implementation

--- a/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Freebies/EditFreebie.razor
@@ -12,7 +12,7 @@
 @inject NavigationManager NavigationManager
 @inject IStringLocalizer<PikachuResource> L
 
-<h3>@L["NewFreebie"]</h3>
+<h3>@L["EditFreebie"]</h3>
 <Card>
     <CardBody>
         <div class="card-body">
